// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Default Grid 1`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Create Default Grid with default theme 1`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Create Default Grid with default theme 2`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Create Default Grid with getGridVerticalRules 1`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Create Default Grid with getGridVerticalRules2 1`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Create Default Grid with getGridVerticalRules2 2`] = `
<div
  className="sc-bdVaJa bFmFpZ"
/>
`;

exports[`Grid bottom 1`] = `
.c0 {
  font-size: 0;
  margin-left: -20px;
}

.c0 > * {
  font-size: 16px;
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

.c0 > * {
  padding-left: 20px;
}

.c0 > * {
  vertical-align: bottom;
}

<div
  className="c0"
/>
`;

exports[`Grid item 1`] = `
<div
  className="sc-bwzfXH kkwfdY"
  media={
    Object {
      "phone": 1,
      "tablet": 1,
    }
  }
/>
`;

exports[`Grid item 2 1`] = `
<div
  className="sc-bwzfXH wsDrp"
  media={
    Object {
      "phone": 1,
      "tablet": 0.5,
    }
  }
/>
`;

exports[`Grid item debug 1`] = `
.c0 {
  background-color: rgba(192,192,192,0.34711959471982534);
  width: NaN%;
}

<div
  className="c0"
/>
`;

exports[`Grid with props 1`] = `
.c0 {
  font-size: 0;
  margin-left: 0px;
  direction: rtl;
  text-align: left;
}

.c0 > * {
  font-size: 16px;
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

.c0 > * {
  padding-left: 0px;
}

.c0 > * {
  direction: ltr;
  text-align: left;
}

<div
  className="c0"
/>
`;

exports[`Middle Center Grid 1`] = `
<div
  className="sc-bdVaJa ehWsk"
/>
`;
